# pullback

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  app.py  config.json  pyproject.toml  requirements.txt  vercel.json
.claude/: settings.local.json
api/: __init__.py  embedded_assets.py  index.py
data/: INVALID_SAMPLES.json  INVALID_SAMPLES.md  benchmark_110.jsonl  benchmark_clean_106.jsonl  benchmark_clean_71.jsonl  benchmark_clean_74.jsonl  benchmark_clean_93.jsonl
demo/: LOGS.md  WEBAPP_BEHAVIOR.md  app.py  stream.py
public/: app.js  index.html
scripts/: analyze_iterations.py  benchmark_reranker_speed.py  benchmark_utils.py  build_theorem_dataset.py  check_iter27.sh  check_iter28.sh  check_openalex.py  demo.py  download_benchmark_papers.py  enrich_theorem_dataset.py  eval_benchmark.py  eval_reranker.py  eval_reranker_theorems.py  monitor_benchmark.py  populate_tex_cache.py  run_iteration.sh  save_iteration.py
tests/: test_api_integration.py  test_arxiv_html_fallback.py  test_arxiv_metadata.py  test_discovery.py  test_discovery_tools.py  test_exa_provider.py  test_extraction_blocks.py  test_extraction_numbering.py  test_forager_agent.py  test_forager_scoring.py  test_forager_tools.py  test_orchestration.py  test_orchestration_streaming.py  test_properties.py  test_provider_title_candidates.py  test_pydantic_ai_runtime.py  test_query_planner.py  test_reranker.py  test_result_policy.py  test_sandbox_async.py  test_sandbox_resolution.py  test_source_fetch.py  (+2 more)
(+166 files in other folders)
