[project]
name = "mathgent"
version = "0.1.0"
description = "PydanticAI multi-agent lemma foraging PoC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-ai>=0.0.18",
  "e2b-code-interpreter>=2.5.0",
  "arxiv>=2.1.0",
  "loguru>=0.7.2",
  "logfire>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "hypothesis>=6.0.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "bandit>=1.8.0",
  "pip-audit>=2.8.0",
  "pymupdf>=1.24.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
strict_optional = true
exclude = ["tests/"]

[tool.bandit]
exclude_dirs = ["tests"]
